Замена вопросов на Экологию

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,36 +4,39 @@
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
     -->
-    <string name="hello_world">Hello Square World!</string>
     <string-array name="questions">
-        <item>1. Общее уравнение прямой. Уравнение прямой, проходящей через заданную точку и перпендикулярной заданному вектору.</item>
-        <item>2. Уравнение прямой с угловым коэффициентом. Каноническое уравнение прямой на плоскости.</item>
-        <item>3. Уравнение прямой, проходящей через 2 заданные точки. Уравнение прямой в отрезках на осях координат.</item>
-        <item>4. Угол между прямыми на плоскости. Условия параллельности и перпендикулярности прямых на плоскости. Расстояние от точки до прямой.</item>
-        <item>5. Общее уравнение плоскости и его исследование.</item>
-        <item>6. Уравнения плоскости, проходящей через 3 заданные точки и в отрезках на осях.</item>
-        <item>7. Условия параллельности и перпендикулярности плоскостей.</item>
-        <item>8. Расстояние от точки до плоскости. Угол между плоскостями.</item>
-        <item>9. Различные виды уравнений прямой в пространстве. Условия пересечения прямых.</item>
-        <item>10. Угол между прямыми, условия параллельности и перпендикулярности прямых в пространстве.</item>
-        <item>11. Прямая и плоскость в пространстве. Условия параллельности и перпендикулярности. Угол между прямой и плоскостью.</item>
-        <item>12. Кривые второго порядка: общее уравнение и его исследование.</item>
-        <item>13. Вывод канонического уравнения окружности.</item>
-        <item>14. Определение и каноническое уравнение эллипса. Малая и большая полуоси, эксцентриситет, уравнения эллипса.</item>
-        <item>15. Определение и каноническое уравнение гиперболы. Действительные и мнимые полуоси, эксцентриситет, уравнение асимптот гиперболы, эксцентриситет.</item>
-        <item>16. Определение и каноническое уравнение параболы. Директриса параболы.</item>
-        <item>17. Определение первообразной. Теорема о первообразных.</item>
-        <item>18. Определение неопределенного интеграла. Формулировка теоремы о существовании неопределенного интеграла.</item>
-        <item>19. Свойства неопределенного интеграла.</item>
-        <item>20. Теорема об инвариантности формул интегрирования.</item>
-        <item>21. Методы непосредственного интегрирования.</item>
-        <item>22. Таблица интегралов.</item>
-        <item>23. Теорема об интегрировании по частям.</item>
-        <item>24. Интегрирование функций, содержащих квадратичные выражения.</item>
-        <item>25. Интегрирование рациональных дробей.</item>
-        <item>26. Интегрирование правильных дробей разложением на простейшие дроби.</item>
-        <item>27. Замена переменного в неопределенном интеграле.</item>
-        <item>28. Интегрирование тригонометрических функций. Универсальная тригонометрическая подстановка.</item>
-        <item>29. Интегрирование иррациональных функций.</item>
+        <item>1. Что изучает экология?</item>
+        <item>2. Проблема взаимодействия природы и общества: основные экологические проблемы человечества.</item>
+        <item>3. Потребление человеком природных ресурсов вещества и его отрицательные последствия.</item>
+        <item>4. Потребление человеком энергии и его отрицательные последствия.</item>
+        <item>5. Способность человека осуществлять деятельность в области информации и отрицательные последствия проявления этой способности.</item>
+        <item>6. Современная теория возникновения жизни на Земле.</item>
+        <item>7. Основные пути эволюции жизни на земле.</item>
+        <item>8. Движущие силы эволюции.</item>
+        <item>9. Экологические факторы.</item>
+        <item>10. Влияние биотических факторов на живые организмы.</item>
+        <item>11. Трофические цепи в природе: структура и назначение.</item>
+        <item>12. Влияние абиотических факторов на живые организмы.</item>
+        <item>13. Понятие экологической ниши в природе.</item>
+        <item>14. Многообразие видов живых организмов.</item>
+        <item>15. Понятие популяции.</item>
+        <item>16. Основные законы экологии.</item>
+        <item>17. Основные этапы антропогенеза.</item>
+        <item>18. Что изучает охрана окружабщей среды?</item>
+        <item>19. Основные объекты отрасли водный транспорт и их влияние на природную среду.</item>
+        <item>20. Основные факторы отрицательного влияния объектов водного транспорта на природную среду.</item>
+        <item>21. Основные особенности использования природных ресурсов человеком.</item>
+        <item>22. Основные направления рационального использования природных ресурсов.</item>
+        <item>23. Эксплуатационное и аварийное загрязнение окружающей среды.</item>
+        <item>24. Механизмы регулирования загрязнения окружающей среды техногенными объектами.</item>
+        <item>25. Понятие риска.</item>
+        <item>26. Параметры оценки отрицательного влияния техногенных объектов на природную среду.</item>
+        <item>27. Коэффициенты экологической безопасности береговых объектов водного транспорта.</item>
+        <item>28. Параметры оценки качества воды: БПК, ХПК, coli-индекс.</item>
+        <item>29. Технология очистки воды.</item>
+        <item>30. Классификация способов очистки воды.</item>
+        <item>31. Способы обработки воды.</item>
+        <item>32. Утилизация отходов: эволюционное значение и основные этапы.</item>
+        <item>33. Управление экологической безопасностью объектов водного транспорта.</item>
     </string-array>
 </resources>
