Математика. Июнь 2019. Вопросы.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,38 +5,46 @@
     values-round/strings.xml for round devices.
     -->
     <string-array name="questions">
-        <item>1. Что изучает экология?</item>
-        <item>2. Проблема взаимодействия природы и общества: основные экологические проблемы человечества.</item>
-        <item>3. Потребление человеком природных ресурсов вещества и его отрицательные последствия.</item>
-        <item>4. Потребление человеком энергии и его отрицательные последствия.</item>
-        <item>5. Способность человека осуществлять деятельность в области информации и отрицательные последствия проявления этой способности.</item>
-        <item>6. Современная теория возникновения жизни на Земле.</item>
-        <item>7. Основные пути эволюции жизни на земле.</item>
-        <item>8. Движущие силы эволюции.</item>
-        <item>9. Экологические факторы.</item>
-        <item>10. Влияние биотических факторов на живые организмы.</item>
-        <item>11. Трофические цепи в природе: структура и назначение.</item>
-        <item>12. Влияние абиотических факторов на живые организмы.</item>
-        <item>13. Понятие экологической ниши в природе.</item>
-        <item>14. Многообразие видов живых организмов.</item>
-        <item>15. Понятие популяции.</item>
-        <item>16. Основные законы экологии.</item>
-        <item>17. Основные этапы антропогенеза.</item>
-        <item>18. Что изучает охрана окружабщей среды?</item>
-        <item>19. Основные объекты отрасли водный транспорт и их влияние на природную среду.</item>
-        <item>20. Основные факторы отрицательного влияния объектов водного транспорта на природную среду.</item>
-        <item>21. Основные особенности использования природных ресурсов человеком.</item>
-        <item>22. Основные направления рационального использования природных ресурсов.</item>
-        <item>23. Эксплуатационное и аварийное загрязнение окружающей среды.</item>
-        <item>24. Механизмы регулирования загрязнения окружающей среды техногенными объектами.</item>
-        <item>25. Понятие риска.</item>
-        <item>26. Параметры оценки отрицательного влияния техногенных объектов на природную среду.</item>
-        <item>27. Коэффициенты экологической безопасности береговых объектов водного транспорта.</item>
-        <item>28. Параметры оценки качества воды: БПК, ХПК, coli-индекс.</item>
-        <item>29. Технология очистки воды.</item>
-        <item>30. Классификация способов очистки воды.</item>
-        <item>31. Способы обработки воды.</item>
-        <item>32. Утилизация отходов: эволюционное значение и основные этапы.</item>
-        <item>33. Управление экологической безопасностью объектов водного транспорта.</item>
+        <item>1. Определение одномерной интегральной суммы и её предела.</item>
+        <item>2. Определение определенного интеграла. Теорема о существовании определенного интеграла.</item>
+        <item>3. Геометрический смысл определенного интеграла.</item>
+        <item>4. Свойства определенного интеграла, выражаемые равенствами.</item>
+        <item>5. Свойства определенного интеграла, выражаемые неравенствами.</item>
+        <item>6. Теорема о среднем.</item>
+        <item>7. Определение интеграла с переменным верхним пределом. Теорема о производной интеграла с переменным верхним пределом.</item>
+        <item>8. Вывод формулы Ньютона-Лейбница.</item>
+        <item>9. Теорема об интегрировании по частям в определенном интеграле.</item>
+        <item>10. Теорема о замене переменного в определенном интеграле.</item>
+        <item>11. Вычисление площадей плоских фигур.</item>
+        <item>12. Вычисление длин кривых.</item>
+        <item>13. Вычисление объемов тел по площадям параллельных сечений. Вычисление объемов тел вращения.</item>
+        <item>14. Несобственные интегралы 1 рода.</item>
+        <item>15. Определение ряда, n-ой частичной суммы ряда. Определение сходящегося ряда и суммы ряда.</item>
+        <item>16. Теорема о необходимом условии сходимости ряда. Следствие.</item>
+        <item>17. Ряд из членов бесконечной геометрической прогрессии.</item>
+        <item>18. Теорема об остатке ряда.</item>
+        <item>19. Свойства сходящихся рядов.</item>
+        <item>20. Теорема сравнения в форме неравенств.</item>
+        <item>21. Теорема сравнения в предельной форме.</item>
+        <item>22. Теорема Даламбера.</item>
+        <item>23. Формулировка радикального признака Коши.</item>
+        <item>24. Формулировка интегрального признака Коши.</item>
+        <item>25. Обобщенный гармонический ряд; его сходимость и расходимость.</item>
+        <item>26. Знакочередующиеся ряды. Признак Лейбница</item>
+        <item>27. Абсолютно и условно сходящиеся ряды. Теорема о достаточном условии сходимости знакочередующегося ряда.</item>
+        <item>28. Свойства условно и абсолютно сходящихся рядов.</item>
+        <item>29. Функциональный ряд. Его область сходимости.</item>
+        <item>30. Определение степенного ряда. Теорема Абеля. Следствие.</item>
+        <item>31. Формула для определения радиуса и интервала сходимости степенного ряда.</item>
+        <item>32. Свойства степенных рядов.</item>
+        <item>33. Теорема о коэффициентах Тейлора. Ряды Тейлора и Маклорена.</item>
+        <item>34. Определение остаточного члена ряда Тейлора. Теорема о виде остаточного члена ряда Тейлора в форме Лагранжа.</item>
+        <item>35. Формула Тейлора.</item>
+        <item>36. Теорема о достаточном условии разложимости функции в ряд Тейлора.</item>
+        <item>37. Разложение функции e2 в ряд Маклорена.</item>
+        <item>38. Разложение функции sinx и cosx в ряд Маклорена.</item>
+        <item>39. Разложение функции ln(1+x) в ряд Маклорена.</item>
+        <item>40. Разложение функции arctgx в ряд Маклорена.</item>
+        <item>41. Биноминальный ряд.</item>
     </string-array>
 </resources>
