Заменены вопросов к матаматике (ноябрь 2019)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,51 +5,43 @@
     values-round/strings.xml for round devices.
     -->
     <string-array name="questions">
-        <item>1. Определение одномерной интегральной суммы и её предела.</item>
-        <item>2. Определение определенного интеграла. Теорема о существовании определенного интеграла.</item>
-        <item>3. Геометрический смысл определенного интеграла.</item>
-        <item>4. Свойства определенного интеграла, выражаемые равенствами.</item>
-        <item>5. Свойства определенного интеграла, выражаемые неравенствами.</item>
-        <item>6. Теорема о среднем.</item>
-        <item>7. Определение интеграла с переменным верхним пределом. Теорема о производной интеграла с переменным верхним пределом.</item>
-        <item>8. Вывод формулы Ньютона-Лейбница.</item>
-        <item>9. Теорема об интегрировании по частям в определенном интеграле.</item>
-        <item>10. Теорема о замене переменного в определенном интеграле.</item>
-        <item>11. Вычисление площадей плоских фигур.</item>
-        <item>12. Вычисление длин кривых.</item>
-        <item>13. Вычисление объемов тел по площадям параллельных сечений. Вычисление объемов тел вращения.</item>
-        <item>14. Несобственные интегралы 1 рода.</item>
-        <item>15. Определение ряда, n-ой частичной суммы ряда. Определение сходящегося ряда и суммы ряда.</item>
-        <item>16. Теорема о необходимом условии сходимости ряда. Следствие.</item>
-        <item>17. Ряд из членов бесконечной геометрической прогрессии.</item>
-        <item>18. Теорема об остатке ряда.</item>
-        <item>19. Свойства сходящихся рядов.</item>
-        <item>20. Теорема сравнения в форме неравенств.</item>
-        <item>21. Теорема сравнения в предельной форме.</item>
-        <item>22. Теорема Даламбера.</item>
-        <item>23. Формулировка радикального признака Коши.</item>
-        <item>24. Формулировка интегрального признака Коши.</item>
-        <item>25. Обобщенный гармонический ряд; его сходимость и расходимость.</item>
-        <item>26. Знакочередующиеся ряды. Признак Лейбница</item>
-        <item>27. Абсолютно и условно сходящиеся ряды. Теорема о достаточном условии сходимости знакочередующегося ряда.</item>
-        <item>28. Свойства условно и абсолютно сходящихся рядов.</item>
-        <item>29. Функциональный ряд. Его область сходимости.</item>
-        <item>30. Определение степенного ряда. Теорема Абеля. Следствие.</item>
-        <item>31. Формула для определения радиуса и интервала сходимости степенного ряда.</item>
-        <item>32. Свойства степенных рядов.</item>
-        <item>33. Теорема о коэффициентах Тейлора. Ряды Тейлора и Маклорена.</item>
-        <item>34. Определение остаточного члена ряда Тейлора. Теорема о виде остаточного члена ряда Тейлора в форме Лагранжа.</item>
-        <item>35. Формула Тейлора.</item>
-        <item>36. Теорема о достаточном условии разложимости функции в ряд Тейлора.</item>
-        <item>37. Разложение функции e2 в ряд Маклорена.</item>
-        <item>38. Разложение функции sinx и cosx в ряд Маклорена.</item>
-        <item>39. Разложение функции ln(1+x) в ряд Маклорена.</item>
-        <item>40. Разложение функции arctgx в ряд Маклорена.</item>
-        <item>41. Биноминальный ряд.</item>
+        <item>1. Комплексные числа. Операции сложения, вычитания, умножения и деления и их свойства.</item>
+        <item>2. Алгебраическая форма записи комплексного числа. Действия над комплексными числами в алгебраической форме.</item>
+        <item>3. Комплексная плоскость. комплексного числа. Модуль и аргумент комплексного числа.</item>
+        <item>4. Умножение, деление, возведение в степень комплексных чисел в тригонометрической форме. Формула Муавра.</item>
+        <item>5. Извлечение корня из комплексного числа.</item>
+        <item>6. Показательная форма записи комплексного числа.</item>
+        <item>7. Решение квадратных уравнений с отрицательным дискриминантом.</item>
+        <item>8. Понятие окрестности точки на плоскости. Понятие области.</item>
+        <item>9. Определение функции двух переменных, ее области определения. График функции двух переменных.</item>
+        <item>10. Определение предела функции двух переменных в точке.</item>
+        <item>11. Определение частных и полного приращения функций двух переменных.</item>
+        <item>12. Определение непрерывности функции двух переменных в точке.</item>
+        <item>13. Определение частных производных функции.</item>
+        <item>14. Определение дифференцируемой в точке функции.</item>
+        <item>15. Теорема о формуле для полного приращения.</item>
+        <item>16. Теорема о достаточном условии дифференцируемости функции двух переменных.</item>
+        <item>17. Определение полного дифференциала функции.</item>
+        <item>18. Теорема о частных производных сложной функции.</item>
+        <item>19. Теорема о полной производной сложной функции.</item>
+        <item>20. Теорема о производной неявной функции.</item>
+        <item>21. Частные производные высших порядков. Теорема о равенстве смешанных производных.</item>
+        <item>22. Определение максимума и минимума функции двух переменных. Теорема о необходимом условии экстремума.</item>
+        <item>23. Теорема о достаточном условии экстремума функции двух переменных.</item>
+        <item>24. Градиент функции двух и трех переменных. Свойство градиента.</item>
+        <item>25. Уравнение касательной плоскости к поверхности в заданной точке. </item>
+        <item>26. Нахождение наибольшего и наименьшего значений непрерывной функции двух переменных в замкнутой и ограниченной области.</item>
     </string-array>
 
     <string-array name="practice">
-        <item>tst btn</item>
-        <item>txt btn 2</item>
+        <item>Полный дифференциал</item>
+        <item>Частные производные высших порядков</item>
+        <item>Дифференциалы высших порядков</item>
+        <item>Дифференцирование сложных функций</item>
+        <item>Дифференцирование неявных функций</item>
+        <item>Экстремум функции</item>
+        <item>Таблица неопределенных интегралов</item>
+        <item>Таблица производных</item>
+        <item>Тригонометрия</item>
     </string-array>
 </resources>
